--- a/.env
+++ b/.env
@@ -1,24 +1,20 @@
 # -------------------------------------
-# KONFIGURASI DATABASE (POSTGRESQL)
+# MIDTRANS (gunakan dari dashboard Midtrans Sandbox)
 # -------------------------------------
-# Ganti nilai-nilai di bawah ini dengan kredensial database PostgreSQL Anda.
-# Contoh: postgresql://postgres:mysecretpassword@localhost:5432/dompetdb?schema=public
-DATABASE_URL="postgresql://NAMA_USER:PASSWORD_ANDA@HOST:PORT/NAMA_DATABASE?schema=public"
-
+MIDTRANS_SERVER_KEY=SB-Mid-server-aA5D_R9yBhRxYRDtWIWIUyIG
 
 # -------------------------------------
-# KEAMANAN APLIKASI (JWT)
+# POSTGRESQL LOCAL DATABASE
+# Ganti username, password, dan nama DB jika beda
 # -------------------------------------
-# Ini adalah kunci rahasia untuk menandatangani Token Web JSON (JWT).
-# Sebaiknya gunakan string yang panjang, acak, dan unik untuk aplikasi Anda.
-# Anda bisa menggunakan generator kata sandi online untuk membuatnya.
-# JANGAN GUNAKAN NILAI DEFAULT INI DI LINGKUNGAN PRODUKSI.
-JWT_SECRET="ganti-dengan-kunci-rahasia-super-aman-dan-panjang-milik-anda-sendiri-123!@#"
-
+DATABASE_URL="postgresql://postgres:password123@localhost:5432/dompetdb?schema=public"
 
 # -------------------------------------
-# PENGATURAN SERVER
+# JWT SECRET (untuk login token)
 # -------------------------------------
-# Anda bisa menentukan port server di sini. Jika tidak diatur, akan menggunakan port 3000.
-# PORT=3000
+JWT_SECRET="IniRahasiaSuperAmanDanHarusDijaga123456"
 
+# -------------------------------------
+# OPSIONAL: PORT backend server
+# -------------------------------------
+PORT=3000
